wayland: don't call gdk_wayland_window_configure without valid size

Commit 7f12dc2b66bba15b2e1c0ca077fa4ae58962ec0f ("wayland: Postpone
window resize requests until configured") runs
gdk_wayland_window_configure unconditionally even if no valid size is
set. This breaks GtkDialogs, which are not shown any more, and results
in warnings like

gtk_widget_size_allocate(): attempt to allocate widget with width -3 and
height -3

Fixes: https://gitlab.gnome.org/GNOME/gtk/-/issues/2574